--- a/jordanmcardle/css/cover.css
+++ b/jordanmcardle/css/cover.css
@@ -33,7 +33,7 @@ body {
   color: #fff;
   text-align: center;
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
-  background: url('../img/bg.jpg');
+  /*background: url('../img/bg.jpg');*/
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
