--- a/jordanmcardle/css/cover.css
+++ b/jordanmcardle/css/cover.css
@@ -34,6 +34,12 @@ body {
   text-align: center;
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
   /*background: url('../img/bg.jpg');*/
+  background: url(../img/bg.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
