--- a/css/style.less
+++ b/css/style.less
@@ -12,20 +12,24 @@
 @font-face {
 }
 
-body {
+body, html {
     height: 100%;
+    min-height: 100%;
 }
 
 .home-page {
     background-color: rgba(221, 75, 57, 1);
 
     nav {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+
         @media @desk {
+            position: fixed;
             border-right: 2px solid #fff !important;
             height: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
             width: 500px;
             margin-bottom: 0;
             border-radius: 0;
@@ -35,10 +39,13 @@ body {
     .navbar.navbar-default {
         min-height: 75px;
         background: url('../images/nav-background.jpg') no-repeat center;
+        background-attachment: fixed;
         border: none;
         border-bottom: solid #fff 2px !important;
 
         @media @desk {
+            min-height: 100%;
+            background-attachment: local;
             background-position: 100% 0;
             border-bottom: none !important;
         }
@@ -117,7 +124,7 @@ body {
                 }
 
                 button {
-                    position: fixed;
+                    position: absolute;
                     right: 0;
                     top: 10px;
                     -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 1);
@@ -125,15 +132,15 @@ body {
                     box-shadow: 0 0 10px rgba(0, 0, 0, 1);
 
                     &.navbar-toggle {
-                        background: url('../images/nav-background.jpg') rgba(0,0,0,0.8) top;
+                        background: rgba(0,0,0,0.8);
                         background-position: 100% 90%;
-                        transition: 0.5s;
+                        transition: 0.25s;
                     }
 
                     &.navbar-toggle.collapsed {
-                        background: url('../images/nav-background.jpg') rgba(0,0,0,0.8) top;
+                        background: rgba(0,0,0,0.1);
                         background-position: 100% 11.5%;
-                        transition: 0.5s;
+                        transition: 0.25s;
                     }
 
                     .icon-bar {
@@ -214,6 +221,7 @@ body {
 
                         &.email-logo {
                             color: #000;
+
                             .email {
                                 color: #FCFF6C;
                                 transition: 0.7s;
@@ -248,8 +256,8 @@ body {
                         }
 
                         &.github-logo {
-                            color:#333333;
-                            
+                            color: #333333;
+
                             .github {
                                 color: #999999;
                                 transition: 0.7s;
@@ -316,6 +324,7 @@ body {
                                 }
                             }
                         }
+
                         &.instagram-logo {
                             .instagram {
                                 color: rgba(81, 127, 164, 1);
@@ -332,6 +341,7 @@ body {
                                 }
                             }
                         }
+
                         &.steam-logo {
                             .steam {
                                 color: #000;
@@ -341,6 +351,7 @@ body {
                             &:hover {
                                 color: #000;
                                 transition: 0.7s;
+
                                 .steam {
                                     color: #fff;
                                     transition: 0.7s;
@@ -365,12 +376,77 @@ body {
     .container {
         width: 100%;
         height: 100%;
+        min-height: 100%;
         color: white;
+        margin-top: 75px;
+        padding: 0;
 
         @media @desk {
+            margin-top: 0;
             background: rgba(221, 75, 57, 1);
-            position: absolute;
+            position: fixed;
             left: 500px;
+            height: 100%;
+            padding: 0;
+            overflow-x: hidden;
         }
+
+
+        .hsContainer {
+            display: table;
+            table-layout: fixed;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            position: relative;
+            opacity: 0;
+        }
+        .hsContent {
+            max-width: 450px;
+            margin: -150px auto 0 auto;
+            display: table-cell;
+            vertical-align: middle;
+            color: #ebebeb;
+            padding: 0 8%;
+            text-align: center
+        }
+        .bcg {
+            background-position: center center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: cover;
+            height: 100%;
+            width: 100%;
+        }
+
+        #slide-1 .bcg {
+            height: 500px;
+            background-image: url('../images/kitteh1.jpg');
+        }
+
+        #slide-2 .bcg {
+            background: none;
+            background-color: #010101;
+            height: 500px;
+            text-align: center
+        }
+
+        #slide-3 .bcg {
+            background-image: url('../images/kitteh2.jpg');
+        }
+
+        #slide-5 {position: fixed;}
+        #slide-5 .bcg {background-image:url('../images/nav-background.jpg')}
+        #slide-5 .bcg2 {
+            background-image:url('../images/nav-background.jpg');
+            position: fixed; bottom: 0; right: 0;
+            opacity: 0; z-index: 1
+        }
+        #slide-5 .bcg3 {
+            background: none; background-color: #010101;
+            position: fixed; bottom: 0; right: 0;
+            opacity: 0; z-index: 2
+        }
+
     }
 }
