--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ html {
   min-height: 100%;
 }
 .home-page {
-  background-color: #dd4b39;
+  background-color: #000000;
   height: 2700px !important;
 }
 .home-page nav {
