--- a/css/style.less
+++ b/css/style.less
@@ -18,7 +18,7 @@ body, html {
 }
 
 .home-page {
-    background-color: rgba(221, 75, 57, 1);
+    background-color: rgba(0,0,0, 1);
 
     nav {
         position: absolute;
