Absolute to Relative positioning on slide content

--- a/css/style.css
+++ b/css/style.css
@@ -377,7 +377,7 @@ html {
 }
 .home-page .container .tech-stack ul,
 .home-page .container .tools-used ul {
-  position: absolute;
+  position: relative;
   right: 50px;
 }
 .home-page .container .tech-stack ul li,
