--- a/css/style.less
+++ b/css/style.less
@@ -430,7 +430,7 @@ body, html {
             font-size: 50px;
             text-shadow: 2px 2px rgba(0,0,0,1);
             ul {
-                position: absolute;
+                position: relative;
                 right: 50px;
                 li {
                     display: inline-block;
