--- a/css/style.less
+++ b/css/style.less
@@ -9,9 +9,6 @@
 @fs: ~"only screen and (min-width: 960px)";
 @desk: ~"only screen and (min-width: 1200px)";
 
-@font-face {
-}
-
 body, html {
     height: 100%;
     min-height: 100%;
@@ -429,9 +426,10 @@ body, html {
         .tech-stack, .tools-used {
             font-size: 50px;
             text-shadow: 2px 2px rgba(0,0,0,1);
+            position: relative;
+            right: 0px;
+            float: right;
             ul {
-                position: relative;
-                right: 50px;
                 li {
                     display: inline-block;
                     a {
@@ -458,25 +456,25 @@ body, html {
         }
 
         #slide-1 .bcg {
-            height: 750px;
+            height: 800px;
             background-image: url('../images/cosmos.jpg');
         }
 
         #slide-2 .bcg {
             background: none;
             background-color: #010101;
-            height: 700px;
+            height: 850px;
             text-align: center;
             z-index: 10;
         }
 
         #slide-3 .bcg {
-            height: 750px;
+            height: 800px;
             background-image: url('../images/pyramid.jpg');
         }
         #slide-4 .bcg {
             background-image: url('../images/city.jpg');
-            height: 800px;
+            height: 850px;
             text-align: center;
             z-index: 10;
         }
