--- a/css/style.less
+++ b/css/style.less
@@ -12,6 +12,7 @@
 body, html {
     height: 100%;
     min-height: 100%;
+    font-family: arial,helvetica;
 }
 
 .home-page {
@@ -175,6 +176,16 @@ body, html {
                             position: relative;
                             top: -5px;
                         }
+                    }
+                }
+
+                .profile-contact {
+                    display: none;
+
+                    @media @desk {
+                        position: absolute;
+                        top:  50px;
+
                     }
                 }
             }
@@ -371,7 +382,7 @@ body, html {
         }
     }
 
-    .container {
+    /*.container {
         width: 100%;
         height: 100%;
         color: white;
@@ -480,9 +491,46 @@ body, html {
         }
     }
 
-    height: 2700px !important;
+            height: 2700px !important;
 
     @media @desk {
         height: 3000px !important;
     }
+
+    */
+
+    #fullpage {
+        @media @desk {
+        position: absolute !important;
+        left: 400px;
+        }
+    }
+
+
+}
+
+/*Fullpage.js Styling*/
+.wrap{
+	margin-left: auto;
+	margin-right: auto;
+	width: 960px;
+	position: relative;
+}
+
+h1{
+	font-size: 6em;
+}
+
+p{
+	font-size: 2em;
+}
+
+.intro p{
+	width: 50%;
+	margin: 0 auto;
+	font-size: 1.5em;
+}
+
+.section{
+	text-align:center;
 }
