--- a/css/style.css
+++ b/css/style.css
@@ -445,30 +445,84 @@ html {
 .home-page .navbar.navbar-default .navbar-toggle {
   border: 1px solid #fff;
 }
-@media only screen and (min-width: 1200px) {
-  .home-page #fullpage {
-    position: absolute !important;
-    left: 400px;
-  }
-}
-/*Fullpage.js Styling*/
-.wrap {
+.home-page #fullpage .wrap {
   margin-left: auto;
   margin-right: auto;
   width: 960px;
   position: relative;
 }
-h1 {
+.home-page #fullpage h1 {
   font-size: 6em;
 }
-p {
+.home-page #fullpage p {
   font-size: 2em;
 }
-.intro p {
+.home-page #fullpage .intro p {
   width: 50%;
   margin: 0 auto;
   font-size: 1.5em;
 }
-.section {
+.home-page #fullpage .section {
+  padding-top: 75px;
   text-align: center;
 }
+@media only screen and (min-width: 1200px) {
+  .home-page #fullpage .section {
+    padding-top: 0;
+  }
+}
+.home-page #fullpage #section0 {
+  color: #fff;
+  text-shadow: 1px 1px rgba(0, 0, 0, 0.8);
+  background: url('../images/winter.jpg') no-repeat;
+  background-size: cover;
+  text-align: center;
+}
+.home-page #fullpage #section1 {
+  color: #fff;
+  text-shadow: 1px 1px rgba(0, 0, 0, 0.8);
+  background: url('../images/spring.jpg') no-repeat;
+  background-size: cover;
+  text-align: center;
+  /*.intro {
+                h1 {
+                    margin: 0 auto;
+                }
+                h1,div,p {
+                    background: rgba(0,0,0,0.4);
+                border: 1px solid rgba(0,0,0,0.8);
+                }
+                
+            }*/
+}
+.home-page #fullpage #section1 ul {
+  padding-left: 0;
+  text-align: center;
+}
+.home-page #fullpage #section1 ul li {
+  display: inline-block;
+}
+.home-page #fullpage #section1 .devicons {
+  font-size: 3em;
+}
+.home-page #fullpage #section2 {
+  color: #fff;
+  text-shadow: 1px 1px rgba(0, 0, 0, 0.8);
+  background: url('../images/summer.jpg') no-repeat;
+  background-size: cover;
+  text-align: center;
+}
+.home-page #fullpage #section3 {
+  color: #fff;
+  text-shadow: 1px 1px rgba(0, 0, 0, 0.8);
+  background: url('../images/leaves.jpg') no-repeat;
+  background-size: cover;
+  text-align: center;
+}
+@media only screen and (min-width: 1200px) {
+  .home-page #fullpage {
+    position: absolute !important;
+    left: 500px;
+  }
+}
+/*Fullpage.js Styling*/
