--- a/css/style.less
+++ b/css/style.less
@@ -500,9 +500,94 @@ body, html {
     */
 
     #fullpage {
+        .wrap{
+	        margin-left: auto;
+	        margin-right: auto;
+	        width: 960px;
+	        position: relative;
+        }
+
+        h1{
+	        font-size: 6em;
+        }
+
+        p{
+	        font-size: 2em;
+        }
+
+        .intro p{
+	        width: 50%;
+	        margin: 0 auto;
+	        font-size: 1.5em;
+        }
+
+        .section{
+            padding-top: 75px;
+	        text-align:center;
+
+            @media @desk {
+                padding-top: 0;
+            }
+        }
+        
+        #section0 {
+            color: #fff;
+            text-shadow: 1px 1px rgba(0,0,0,0.8);
+            background: url('../images/winter.jpg') no-repeat;
+            background-size: cover;
+            text-align: center;
+        }
+
+        #section1 {
+            color: #fff;
+            text-shadow: 1px 1px rgba(0,0,0,0.8);
+            background: url('../images/spring.jpg') no-repeat;
+            background-size: cover;
+            text-align: center;
+
+            /*.intro {
+                h1 {
+                    margin: 0 auto;
+                }
+                h1,div,p {
+                    background: rgba(0,0,0,0.4);
+                border: 1px solid rgba(0,0,0,0.8);
+                }
+                
+            }*/
+
+            ul {
+                padding-left: 0;
+                text-align: center;
+                li {
+                    display: inline-block;
+                }
+            }
+
+            .devicons {
+                font-size: 3em;
+            }
+        }
+
+        #section2 {
+            color: #fff;
+            text-shadow: 1px 1px rgba(0,0,0,0.8);
+            background: url('../images/summer.jpg') no-repeat;
+            background-size: cover;
+            text-align: center;
+        }
+
+        #section3 {
+            color: #fff;
+            text-shadow: 1px 1px rgba(0,0,0,0.8);
+            background: url('../images/leaves.jpg') no-repeat;
+            background-size: cover;
+            text-align: center;
+        }
+
         @media @desk {
-        position: absolute !important;
-        left: 400px;
+            position: absolute !important;
+            left: 500px;
         }
     }
 
@@ -510,27 +595,3 @@ body, html {
 }
 
 /*Fullpage.js Styling*/
-.wrap{
-	margin-left: auto;
-	margin-right: auto;
-	width: 960px;
-	position: relative;
-}
-
-h1{
-	font-size: 6em;
-}
-
-p{
-	font-size: 2em;
-}
-
-.intro p{
-	width: 50%;
-	margin: 0 auto;
-	font-size: 1.5em;
-}
-
-.section{
-	text-align:center;
-}
