--- a/css/style.less
+++ b/css/style.less
@@ -507,33 +507,61 @@ body, html {
 	        position: relative;
         }
 
-        h1{
-	        font-size: 6em;
+        h1 {
+	        font-size: 30px;
+
+            @media @iphone6 {
+                font-size: 32px;
+            }
+            @media @plus {
+                font-size: 34px;
+            }
+            @media @mon {
+                font-size: 5em;
+            }
+            @media @desk {
+                font-size: 6em;
+            }
         }
 
-        p{
-	        font-size: 2em;
+        p {
+	        font-size: 16px;
+
+            @media @iphone6 {
+                font-size: 16px;
+            }
+
+            @media @plus {
+                font-size: 17px;
+            }
+
+            @media @mon {
+                font-size: 1.5em;
+            }
+
+            @media @desk {
+                font-size: 2em;
+            }
         }
 
         .intro p{
 	        width: 50%;
 	        margin: 0 auto;
-	        font-size: 1.5em;
         }
 
         .section{
-            padding-top: 75px;
+            top: 75px;
 	        text-align:center;
 
             @media @desk {
-                padding-top: 0;
+                top: 0;
             }
         }
         
         #section0 {
             color: #fff;
             text-shadow: 1px 1px rgba(0,0,0,0.8);
-            background: url('../images/winter.jpg') no-repeat;
+            background: url('../images/intro.jpg') no-repeat center;
             background-size: cover;
             text-align: center;
         }
@@ -541,38 +569,59 @@ body, html {
         #section1 {
             color: #fff;
             text-shadow: 1px 1px rgba(0,0,0,0.8);
-            background: url('../images/spring.jpg') no-repeat;
+            background: url('../images/spring.jpg') no-repeat center;
             background-size: cover;
             text-align: center;
 
-            /*.intro {
-                h1 {
-                    margin: 0 auto;
-                }
-                h1,div,p {
-                    background: rgba(0,0,0,0.4);
-                border: 1px solid rgba(0,0,0,0.8);
-                }
-                
-            }*/
+            .tech-stack, .tools-used, .other {
+                width: 70%;
+                margin: 0 auto;
+                ul {
+                    padding-left: 0;
+                    text-align: center;
+                    width: 100%;
 
-            ul {
-                padding-left: 0;
-                text-align: center;
-                li {
-                    display: inline-block;
-                }
-            }
+                    li {
+                        padding: 15px 0;
+                        display: inline-block;
 
-            .devicons {
-                font-size: 3em;
+                        i, .devicons {
+                            font-size: 2em;
+                            padding: 0 15px;
+
+                            @media @mon {
+                                font-size: 3em;
+                                padding: 0 20px;
+                            }
+
+                            @media @desk {
+                                font-size: 4em;
+                                padding: 0 25px;
+                            }
+                        }
+
+                        .devicons {
+                            font-size: 2.5em;
+
+                            @media @mon {
+                                font-size: 3.5em;
+                            }
+
+                            @media @desk {
+                                font-size: 4.5em;
+                                padding: 0 25px;
+                            }
+                        }
+                    }
+                }
+
             }
         }
 
         #section2 {
             color: #fff;
             text-shadow: 1px 1px rgba(0,0,0,0.8);
-            background: url('../images/summer.jpg') no-repeat;
+            background: url('../images/summer.jpg') no-repeat center;
             background-size: cover;
             text-align: center;
         }
@@ -580,7 +629,7 @@ body, html {
         #section3 {
             color: #fff;
             text-shadow: 1px 1px rgba(0,0,0,0.8);
-            background: url('../images/leaves.jpg') no-repeat;
+            background: url('../images/leaves.jpg') no-repeat center;
             background-size: cover;
             text-align: center;
         }
