--- a/css/style.less
+++ b/css/style.less
@@ -612,6 +612,14 @@ body, html {
                                 padding: 0 25px;
                             }
                         }
+
+                        svg {
+                            width: 30px;
+
+                            @media @desk {
+                                width:50px;
+                            }
+                        }
                     }
                 }
 
